clusters/home/apps/immich/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    external-dns.kubernetes.io/hostname: "immich.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`immich.layertwo.dev`)
    kind: Rule
    services:
    - name: immich-server
      port: 2283
      serversTransport: immich-transport
